# whisper-uni-api

./: .gitignore  API_SERVICE.md  Dockerfile.api  Dockerfile.worker  Dockerfile.worker.timestamped  Dockerfile.worker.whisperx  ENGINE_RUNNERS.md  LICENSE  README.md  WORKER_SERVICE.md  design.md  docker-compose.yml  implementation.md  main.py  mvp.md  requirements.txt  run_local.bat  run_local.sh  setup.py
api/: .env.example  Dockerfile  __init__.py  config.py  handlers.py  hello.py  main.py  models.py  pyproject.toml  run_local.bat  run_local.sh  storage.py
api/src/api/: __init__.py  config.py  handlers.py  main.py  models.py  storage.py
api/tests/: __init__.py  test_api.py
docs/: WORKER_SERVICE.md  implementation.md  mvp.md
worker/: Dockerfile.timestamped  Dockerfile.whisperx  __init__.py  config.py  main.py  pyproject.toml  run_local.bat  run_local.sh  tasks.py
worker/runners/: __init__.py  base.py  timestamped.py  whisperx.py
worker/src/worker/: __init__.py  config.py  main.py  tasks.py
worker/src/worker/runners/: __init__.py  base.py  timestamped.py  whisperx.py
worker/tests/: TESTING_GUIDE.md  __init__.py  conftest.py  test_worker.py  test_worker_with_mock_direct.py  test_worker_with_mock_factory.py  test_worker_with_mock_fixture.py
worker/tests/mock/: __init__.py  factory.py  runner.py
