[project]
name = "whisper-uni-worker"
version = "0.1.0"
description = "Universal Whisper Transcription Worker Service"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0.0",
    "rq>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
]

